Fix alignment of social media icons .

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -40,11 +40,21 @@ body {
    z-index:1000;
 
    .header-meta {
-      @include span-columns(3 of 12);
+      @include span-columns(6 of 12);
 
       h1 {
          margin: 10px 0;
          padding: 0;
+
+         @include media($tablet) {
+            margin: 15px 0;
+            font-size: 130%;
+         }
+
+         @include media($mobile) {
+            margin: 18px 0;
+            font-size: 100%;
+         }
       }
 
       .avatar {
@@ -72,9 +82,10 @@ body {
    }
 
    .social-media {
-      @include span-columns(2 of 12);
-      @include shift(7);
+      @include span-columns(3 of 12);
+      @include shift(2);
 
+      float: right;
       font-size: 1.3em;
       margin-top: 7px;
       text-align: right;
